Bug 633240 nsIMIMEService.getTypeFromFile(null) crashes [@ nsExternalHelperAppService::GetTypeFromFile(nsIFile*, nsACString_internal&) ] r=biesi